# Cpp

./: .gitignore  CMakeLists.txt  README.md
Chess/: README.md  chess  prohlaseni.txt
Projects/1-Fibonacci_code/: fib_code.cpp  test.cpp  tmp.cpp
Projects/1-Huffman_code/: hexdump.cpp  test
Projects/2-Employee_records/: test.cpp
Projects/3-Date/: test.cpp
Projects/3-Intervals/: test.cpp
Projects/4-File_with_versions/: deep_copy.cpp  tester.cpp
Projects/4-Mail_server/: test.cpp
Projects/5-Checking_the_inspection_report/: Kontrola kontrolního hlášení.txt
Projects/5-Supermarket/: test.cpp
Projects/6-Dialog_box/: test.cpp
Projects/7-Result_sheet/: Výsledková listina.txt  test.cpp
Small_codes/3-Phone_list/: slow.cpp
Small_codes/6-Set/: test.cpp
Small_codes/binary_file/: binRead.cpp
Small_codes/lab_01/: test.cpp
Small_codes/lab_02/: main.cpp
Small_codes/lab_03/: exam.cpp
Small_codes/lab_04/: fraction.cpp  fraction.hpp
exam/: battleroyale.cpp
lab/3-Phone_list/: test.cpp  (+1 more)
progtest/: CMakeLists.txt
progtest/1-Fibonacci_code/: Fibonacciho kód.txt  a.txt  b.txt  test.cpp
progtest/1-Huffman_code/: test.cpp
progtest/2-Control_report/: lower_bound_test.cpp  main.cpp  test.cpp
progtest/2-Employee_records/: Evidence zaměstnanců.txt  test.cpp
progtest/3-Date/: test.cpp
progtest/3-Intervals/: Intervaly.txt  intervals.cpp  sranda.cpp  test.cpp
progtest/4-File_with_versions/: Soubor s verzemi.txt  aaa.cpp  test.cpp
progtest/4-Mail_server/: Poštovní server.txt  test.cpp
progtest/5-Checking_the_inspection_report/: slow.cpp  test.cpp
progtest/5-Supermarket/: Supermarket.txt
progtest/6-Dialog_box/: Dialogové okno I.txt  poly.cpp  test.cpp
progtest/7-Result_sheet/: test.cpp
progtest/cv/cv_03/: test.cpp
progtest/cv/cv_03/tests/: test2_in.txt
progtest/cv/cv_04/: test.cpp
progtest/cv_03/: main.cpp  test.cpp
progtest/hw_01/: bbb.txt  hexdump.cpp  main.cpp  tempfile  test  test.cpp
progtest/hw_02/: lower_bound_test.cpp  main.cpp  test.cpp  text.txt
progtest/hw_03/: main.cpp  test.cpp
progtest/hw_04/: deep_copy.cpp  main.cpp  test.cpp
progtest/hw_05/: test.cpp
semestralni_prace/: .gitignore  DOCUMENTATION.md  Doxyfile  Makefile  README.md  chess  jahelluk  zadani.txt
(+74 files in other folders)
